--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,5 @@
 spring.application.name=flightservice
 spring.cloud.config.uri=http://localhost:8888
+
+spring.jpa.show-sql = true
+spring.jpa.properties.format_sql = true
